--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
 body{
-    background-color: rgb(174, 199, 153);
+    background-color: rgb(157, 177, 146)
+}
+header{
+border-bottom: solid 2px rgb;yel
+
+
 }
