--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body{
-    background-color: rgb(157, 177, 146)
+    background-color: rgb(157, 177, 146);
 }
 header{
-border-bottom: solid 2px rgb;yel
+border-bottom: solid 2px rgb(157, 177, 146);
 
 
 }
